[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/texturas/image2.png" type="Texture" id=1]
[ext_resource path="res://game/menu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/font/RobotoSlab-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://game/menu/ParallaxBackground.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 61
outline_size = 5
outline_color = Color( 0.231373, 0.133333, 0.0470588, 1 )
font_data = ExtResource( 3 )

[sub_resource type="OpenSimplexNoise" id=3]
period = 70.2
lacunarity = 1.68

[sub_resource type="NoiseTexture" id=4]
width = 1024
height = 720
seamless = true
noise = SubResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -298.0
margin_top = -102.0
margin_right = 298.0
margin_bottom = 102.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 596.0
margin_bottom = 70.0
custom_constants/separation = 20
alignment = 1

[node name="JugarFacil" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 70.0
rect_min_size = Vector2( 200, 70 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Fácil"

[node name="JugarMedio" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 220.0
margin_right = 398.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Medio"

[node name="JugarDificil" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 418.0
margin_right = 596.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Difícil"

[node name="Estudiar" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 596.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 70 )
custom_fonts/font = SubResource( 2 )
text = "Estudiar"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -392.0
margin_top = -236.0
margin_right = 396.0
margin_bottom = -155.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0.976471, 0.976471, 0.976471, 1 )
custom_fonts/font = SubResource( 1 )
text = "Adivina Quién, Presidentes"
align = 1

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 4 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 720 )

[node name="TextureRect2" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 0.556863, 0.392157, 0.231373, 1 )
self_modulate = Color( 2, 2, 2, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 512.0
margin_bottom = 512.0
texture = SubResource( 4 )

[connection signal="button_up" from="VBoxContainer/HBoxContainer/JugarFacil" to="." method="_on_JugarFacil_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/JugarMedio" to="." method="_on_JugarMedio_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/JugarDificil" to="." method="_on_JugarDificil_button_up"]
[connection signal="button_up" from="VBoxContainer/Estudiar" to="." method="_on_Estudiar_button_up"]
